update based on the db repo

--- a/env.example
+++ b/env.example
@@ -1,9 +1,9 @@
 # Database
 METADATA_POSTGRES_DSN=postgresql://brownie:brownie@localhost:5432/brownie_metadata
-METADATA_DATABASE_URL=postgresql://brownie:brownie@localhost:5432/brownie_metadata
 
 # JWT Authentication
-METADATA_JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# Generate with: openssl rand -base64 32
+METADATA_JWT_SECRET=CHANGE_THIS_TO_A_STRONG_SECRET_AT_LEAST_32_CHARS
 METADATA_JWT_EXPIRES_MINUTES=60
 METADATA_JWT_ALGORITHM=HS256
 
@@ -20,3 +20,15 @@ METADATA_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080"]
 METADATA_OKTA_DOMAIN=
 METADATA_OKTA_CLIENT_ID=
 METADATA_OKTA_CLIENT_SECRET=
+
+# Certificate Management (Production)
+VAULT_ENABLED=false
+VAULT_URL=https://vault.example.com
+VAULT_TOKEN=your-vault-token
+VAULT_CERT_PATH=secret/brownie-metadata/certs
+
+# Certificate Management (Development)
+LOCAL_CERT_DIR=dev-certs
+
+# mTLS Configuration
+METADATA_MTLS_ENABLED=false
