--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "alembic>=1.12.0",
     "pydantic-settings>=2.0.0",
     "python-jose[cryptography]>=3.3.0",
-    "passlib[bcrypt]>=1.7.4",
+    "passlib[argon2,bcrypt]>=1.7.4",
     "prometheus-client>=0.19.0",
     "structlog>=23.2.0",
     "httpx>=0.25.0",
@@ -28,8 +28,8 @@ dependencies = [
     "pytest-cov>=4.1.0",
     "testcontainers>=3.7.0",
     "pytest-mock>=3.12.0",
-    # Database project dependency
-    "-e ../brownie-metadata-database",
+    "brownie-metadata-db",
+    "argon2-cffi>=25.1.0",
 ]
 
 [project.optional-dependencies]
@@ -64,6 +64,9 @@ warn_no_return = true
 warn_unreachable = true
 strict_equality = true
 
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
@@ -82,3 +85,6 @@ markers = [
     "integration: Integration tests",
     "e2e: End-to-end tests",
 ]
+
+[tool.uv.sources]
+brownie-metadata-db = { path = "../brownie-metadata-database", editable = true }
