fix: add missing dev dependencies for CI/CD pipeline
- Add ruff, mypy, bandit, safety to dev dependencies in pyproject.toml
- Replace black/isort/flake8 with ruff for faster linting
- Add ruff configuration with proper rules and settings
- Update CI/CD workflow to install dev dependencies
- Fixes 'Failed to spawn: ruff' error in GitHub Actions

This ensures all linting and security tools are available in CI.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,7 @@ jobs:
     - name: Install dependencies
       run: |
         uv sync --dev
+        uv add --dev ruff mypy bandit safety
     
     - name: Generate test certificates
       run: |
@@ -163,6 +164,7 @@ jobs:
     - name: Install dependencies
       run: |
         uv sync --dev
+        uv add --dev ruff mypy bandit safety
     
     - name: Generate test certificates
       run: |
