fix: resolve all linting errors and improve code quality
- Fix E712 errors: replace == True with direct boolean checks
- Fix B904 errors: add proper exception chaining with 'from err'
- Fix F821 error: use forward reference for UserResponse in schemas
- Fix F841 error: remove unused id_token variable
- Fix B028 errors: add stacklevel=2 to warnings
- Fix indentation issues in exception handling blocks
- Clean up whitespace in docstrings

All ruff checks now pass successfully. Code is ready for CI/CD pipeline.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,3 +100,11 @@ markers = [
     "integration: Integration tests",
     "e2e: End-to-end tests",
 ]
+
+[dependency-groups]
+dev = [
+    "bandit>=1.8.6",
+    "mypy>=1.18.2",
+    "ruff>=0.14.2",
+    "safety>=3.6.2",
+]
