refactor: remove Alembic from API repository
- Remove alembic/ directory and alembic.ini (database migrations handled by brownie-metadata-db package)
- Remove alembic dependency from pyproject.toml
- Update Makefile to clarify database migrations are handled elsewhere
- Update Dockerfile to remove alembic references
- Update documentation to clarify separation of concerns
- Fix .gitignore to allow certificates.py while ignoring actual cert files

Database schema changes should be made in the brownie-metadata-db repository,
not in this API repository. This maintains proper separation of concerns.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 secrets/
 keys/
 certs/
-certificates/
+# certificates/  # Commented out - we want to keep certificates.py but ignore actual cert files
 *.pem
 *.key
 *.crt
@@ -23,6 +23,7 @@ certificates/
 
 # Development certificates
 dev-certs/
+security/certificates/dev-certs/
 /tmp/brownie-certs/
 /tmp/pg-certs/
 
