--- a/tests/docker-compose.test.yml
+++ b/tests/docker-compose.test.yml
@@ -1,18 +1,17 @@
 version: '3.8'
 
 services:
-  postgres-ssl:
-    image: postgres:14
+  postgres:
+    image: postgres:16
+    container_name: brownie-test-postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: test_brownie_metadata
-      POSTGRES_HOST_AUTH_METHOD: md5
     ports:
-      - "5432:5432"
-    volumes:
-      - ./postgresql.conf:/etc/postgresql/postgresql.conf
-      - ./server.crt:/var/lib/postgresql/server.crt
-      - ./server.key:/var/lib/postgresql/server.key
-    command: postgres -c ssl=on -c ssl_cert_file=/var/lib/postgresql/server.crt -c ssl_key_file=/var/lib/postgresql/server.key -c config_file=/etc/postgresql/postgresql.conf
-
+      - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
