--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Start PostgreSQL with Docker Compose
       run: |
         # Use the same docker-compose setup as local development
-        docker-compose -f tests/docker-compose.test.yml up -d
+        docker compose -f tests/docker-compose.test.yml up -d
         
         # Wait for PostgreSQL to be ready
         echo "Waiting for PostgreSQL to be ready..."
@@ -70,7 +70,7 @@ jobs:
     - name: Stop PostgreSQL
       if: always()
       run: |
-        docker-compose -f tests/docker-compose.test.yml down -v
+        docker compose -f tests/docker-compose.test.yml down -v
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
