--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -71,29 +71,8 @@ jobs:
         ls -la dev-certs/
         
         echo ""
-        echo "=== Preparing certificates with correct ownership ==="
-        # Start a temporary container
-        docker run -d --name temp-cert-setup postgres:16
-        sleep 3
-        
-        # Copy certs and set ownership
-        docker exec temp-cert-setup mkdir -p /var/lib/postgresql/certs
-        docker cp dev-certs/server.crt temp-cert-setup:/var/lib/postgresql/certs/
-        docker cp dev-certs/server.key temp-cert-setup:/var/lib/postgresql/certs/
-        docker cp dev-certs/ca.crt temp-cert-setup:/var/lib/postgresql/certs/
-        
-        docker exec temp-cert-setup chown postgres:postgres /var/lib/postgresql/certs/server.* /var/lib/postgresql/certs/ca.crt
-        docker exec temp-cert-setup chmod 600 /var/lib/postgresql/certs/server.key
-        docker exec temp-cert-setup chmod 644 /var/lib/postgresql/certs/server.crt /var/lib/postgresql/certs/ca.crt
-        
-        echo ""
-        echo "=== Verifying cert ownership ==="
-        docker exec temp-cert-setup ls -la /var/lib/postgresql/certs/
-        
-        # Commit the container with certs
-        docker commit temp-cert-setup postgres-with-certs:test
-        docker stop temp-cert-setup
-        docker rm temp-cert-setup
+        echo "=== Building PostgreSQL image with SSL ==="
+        docker build -f tests/Dockerfile.postgres-ssl -t postgres-ssl:test .
         
         echo ""
         echo "=== Starting PostgreSQL with SSL ==="
@@ -102,12 +81,7 @@ jobs:
           -e POSTGRES_PASSWORD=postgres \
           -e POSTGRES_DB=test_brownie_metadata \
           -p 5433:5432 \
-          postgres-with-certs:test \
-          postgres \
-          -c ssl=on \
-          -c ssl_cert_file=/var/lib/postgresql/certs/server.crt \
-          -c ssl_key_file=/var/lib/postgresql/certs/server.key \
-          -c ssl_ca_file=/var/lib/postgresql/certs/ca.crt
+          postgres-ssl:test
         
         echo ""
         echo "=== Immediate container check ==="
@@ -229,7 +203,7 @@ jobs:
         echo "=== Stopping PostgreSQL ==="
         docker stop brownie-test-postgres || true
         docker rm brownie-test-postgres || true
-        docker rmi postgres-with-certs:test || true
+        docker rmi postgres-ssl:test || true
         echo "PostgreSQL stopped and cleaned up"
     
     - name: Upload coverage to Codecov
